ruleml-api/target/generated-sources/antlr3/org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntaxParser.java
// $ANTLR 3.4 org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g 2011-11-12 14:16:03

package org.ruleml.api.presentation_syntax_parser;

import org.ruleml.api.*;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class RuleMLPresentationSyntaxParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALPHA", "AND", "BASE", "DIGIT", "DOCUMENT", "ECHAR", "EOL", "EQUAL", "EXISTS", "FORALL", "GREATER", "GROUP", "GROUP_ELEM_LIST", "ID", "ID_CHAR", "ID_START_CHAR", "IMPLICATION", "IMPORT", "IMPORTS", "INSTANCE", "IRI_CHAR", "IRI_REF", "IRI_START_CHAR", "LESS", "LITERAL", "LPAR", "LSQBR", "MULTI_LINE_COMMENT", "PREFIX", "PREFIXES", "PSOA", "RPAR", "RSQBR", "SLOT", "SLOTS", "SLOT_ARROW", "STRING", "SUBCLASS", "SYMSPACE_OPER", "TUPLE", "TUPLES", "VAR", "VAR_ID", "VAR_LIST", "WHITESPACE"
    };

    public static final int EOF=-1;
    public static final int ALPHA=4;
    public static final int AND=5;
    public static final int BASE=6;
    public static final int DIGIT=7;
    public static final int DOCUMENT=8;
    public static final int ECHAR=9;
    public static final int EOL=10;
    public static final int EQUAL=11;
    public static final int EXISTS=12;
    public static final int FORALL=13;
    public static final int GREATER=14;
    public static final int GROUP=15;
    public static final int GROUP_ELEM_LIST=16;
    public static final int ID=17;
    public static final int ID_CHAR=18;
    public static final int ID_START_CHAR=19;
    public static final int IMPLICATION=20;
    public static final int IMPORT=21;
    public static final int IMPORTS=22;
    public static final int INSTANCE=23;
    public static final int IRI_CHAR=24;
    public static final int IRI_REF=25;
    public static final int IRI_START_CHAR=26;
    public static final int LESS=27;
    public static final int LITERAL=28;
    public static final int LPAR=29;
    public static final int LSQBR=30;
    public static final int MULTI_LINE_COMMENT=31;
    public static final int PREFIX=32;
    public static final int PREFIXES=33;
    public static final int PSOA=34;
    public static final int RPAR=35;
    public static final int RSQBR=36;
    public static final int SLOT=37;
    public static final int SLOTS=38;
    public static final int SLOT_ARROW=39;
    public static final int STRING=40;
    public static final int SUBCLASS=41;
    public static final int SYMSPACE_OPER=42;
    public static final int TUPLE=43;
    public static final int TUPLES=44;
    public static final int VAR=45;
    public static final int VAR_ID=46;
    public static final int VAR_LIST=47;
    public static final int WHITESPACE=48;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public RuleMLPresentationSyntaxParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public RuleMLPresentationSyntaxParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return RuleMLPresentationSyntaxParser.tokenNames; }
    public String getGrammarFileName() { return "org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g"; }


    public static class top_level_item_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "top_level_item"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:45:1: top_level_item : ( document | EOF );
    public final RuleMLPresentationSyntaxParser.top_level_item_return top_level_item() throws RecognitionException {
        RuleMLPresentationSyntaxParser.top_level_item_return retval = new RuleMLPresentationSyntaxParser.top_level_item_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        RuleMLPresentationSyntaxParser.document_return document1 =null;


        Object EOF2_tree=null;

        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:46:5: ( document | EOF )
            int alt1=2;
            switch ( input.LA(1) ) {
            case DOCUMENT:
                {
                alt1=1;
                }
                break;
            case EOF:
                {
                alt1=2;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:46:7: document
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_document_in_top_level_item150);
                    document1=document();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, document1.getTree());

                    }
                    break;
                case 2 :
                    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:47:7: EOF
                    {
                    root_0 = (Object)adaptor.nil();


                    EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_top_level_item158); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EOF2_tree = 
                    (Object)adaptor.create(EOF2)
                    ;
                    adaptor.addChild(root_0, EOF2_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "top_level_item"


    public static class base_return extends ParserRuleReturnScope {
        public AbstractSyntax.Base result;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "base"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:51:1: base returns [AbstractSyntax.Base result] : BASE LPAR IRI_REF RPAR -> ^( BASE IRI_REF ) ;
    public final RuleMLPresentationSyntaxParser.base_return base() throws RecognitionException {
        RuleMLPresentationSyntaxParser.base_return retval = new RuleMLPresentationSyntaxParser.base_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token BASE3=null;
        Token LPAR4=null;
        Token IRI_REF5=null;
        Token RPAR6=null;

        Object BASE3_tree=null;
        Object LPAR4_tree=null;
        Object IRI_REF5_tree=null;
        Object RPAR6_tree=null;
        RewriteRuleTokenStream stream_BASE=new RewriteRuleTokenStream(adaptor,"token BASE");
        RewriteRuleTokenStream stream_IRI_REF=new RewriteRuleTokenStream(adaptor,"token IRI_REF");
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");

        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:53:5: ( BASE LPAR IRI_REF RPAR -> ^( BASE IRI_REF ) )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:54:9: BASE LPAR IRI_REF RPAR
            {
            BASE3=(Token)match(input,BASE,FOLLOW_BASE_in_base190); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_BASE.add(BASE3);


            LPAR4=(Token)match(input,LPAR,FOLLOW_LPAR_in_base192); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LPAR.add(LPAR4);


            IRI_REF5=(Token)match(input,IRI_REF,FOLLOW_IRI_REF_in_base194); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IRI_REF.add(IRI_REF5);


            RPAR6=(Token)match(input,RPAR,FOLLOW_RPAR_in_base196); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RPAR.add(RPAR6);


            // AST REWRITE
            // elements: BASE, IRI_REF
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 55:9: -> ^( BASE IRI_REF )
            {
                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:55:12: ^( BASE IRI_REF )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_BASE.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_IRI_REF.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "base"


    public static class prefix_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prefix"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:59:1: prefix : PREFIX LPAR ID IRI_REF RPAR -> ^( PREFIX ID IRI_REF ) ;
    public final RuleMLPresentationSyntaxParser.prefix_return prefix() throws RecognitionException {
        RuleMLPresentationSyntaxParser.prefix_return retval = new RuleMLPresentationSyntaxParser.prefix_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PREFIX7=null;
        Token LPAR8=null;
        Token ID9=null;
        Token IRI_REF10=null;
        Token RPAR11=null;

        Object PREFIX7_tree=null;
        Object LPAR8_tree=null;
        Object ID9_tree=null;
        Object IRI_REF10_tree=null;
        Object RPAR11_tree=null;
        RewriteRuleTokenStream stream_PREFIX=new RewriteRuleTokenStream(adaptor,"token PREFIX");
        RewriteRuleTokenStream stream_IRI_REF=new RewriteRuleTokenStream(adaptor,"token IRI_REF");
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:60:5: ( PREFIX LPAR ID IRI_REF RPAR -> ^( PREFIX ID IRI_REF ) )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:61:9: PREFIX LPAR ID IRI_REF RPAR
            {
            PREFIX7=(Token)match(input,PREFIX,FOLLOW_PREFIX_in_prefix238); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_PREFIX.add(PREFIX7);


            LPAR8=(Token)match(input,LPAR,FOLLOW_LPAR_in_prefix240); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LPAR.add(LPAR8);


            ID9=(Token)match(input,ID,FOLLOW_ID_in_prefix242); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID9);


            IRI_REF10=(Token)match(input,IRI_REF,FOLLOW_IRI_REF_in_prefix244); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IRI_REF.add(IRI_REF10);


            RPAR11=(Token)match(input,RPAR,FOLLOW_RPAR_in_prefix246); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RPAR.add(RPAR11);


            // AST REWRITE
            // elements: ID, IRI_REF, PREFIX
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 61:37: -> ^( PREFIX ID IRI_REF )
            {
                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:61:40: ^( PREFIX ID IRI_REF )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_PREFIX.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_IRI_REF.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prefix"


    public static class importDecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "importDecl"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:66:1: importDecl : IMPORT LPAR kb= IRI_REF (profile= IRI_REF )? RPAR -> ^( IMPORT $kb ( $profile)? ) ;
    public final RuleMLPresentationSyntaxParser.importDecl_return importDecl() throws RecognitionException {
        RuleMLPresentationSyntaxParser.importDecl_return retval = new RuleMLPresentationSyntaxParser.importDecl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token kb=null;
        Token profile=null;
        Token IMPORT12=null;
        Token LPAR13=null;
        Token RPAR14=null;

        Object kb_tree=null;
        Object profile_tree=null;
        Object IMPORT12_tree=null;
        Object LPAR13_tree=null;
        Object RPAR14_tree=null;
        RewriteRuleTokenStream stream_IRI_REF=new RewriteRuleTokenStream(adaptor,"token IRI_REF");
        RewriteRuleTokenStream stream_IMPORT=new RewriteRuleTokenStream(adaptor,"token IMPORT");
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");

        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:67:5: ( IMPORT LPAR kb= IRI_REF (profile= IRI_REF )? RPAR -> ^( IMPORT $kb ( $profile)? ) )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:68:9: IMPORT LPAR kb= IRI_REF (profile= IRI_REF )? RPAR
            {
            IMPORT12=(Token)match(input,IMPORT,FOLLOW_IMPORT_in_importDecl284); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IMPORT.add(IMPORT12);


            LPAR13=(Token)match(input,LPAR,FOLLOW_LPAR_in_importDecl286); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LPAR.add(LPAR13);


            kb=(Token)match(input,IRI_REF,FOLLOW_IRI_REF_in_importDecl290); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IRI_REF.add(kb);


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:68:32: (profile= IRI_REF )?
            int alt2=2;
            switch ( input.LA(1) ) {
                case IRI_REF:
                    {
                    alt2=1;
                    }
                    break;
            }

            switch (alt2) {
                case 1 :
                    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:68:33: profile= IRI_REF
                    {
                    profile=(Token)match(input,IRI_REF,FOLLOW_IRI_REF_in_importDecl295); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_IRI_REF.add(profile);


                    }
                    break;

            }


            RPAR14=(Token)match(input,RPAR,FOLLOW_RPAR_in_importDecl299); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RPAR.add(RPAR14);


            // AST REWRITE
            // elements: IMPORT, kb, profile
            // token labels: kb, profile
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleTokenStream stream_kb=new RewriteRuleTokenStream(adaptor,"token kb",kb);
            RewriteRuleTokenStream stream_profile=new RewriteRuleTokenStream(adaptor,"token profile",profile);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 69:9: -> ^( IMPORT $kb ( $profile)? )
            {
                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:69:12: ^( IMPORT $kb ( $profile)? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_IMPORT.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_kb.nextNode());

                // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:69:26: ( $profile)?
                if ( stream_profile.hasNext() ) {
                    adaptor.addChild(root_1, stream_profile.nextNode());

                }
                stream_profile.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "importDecl"


    public static class document_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "document"
    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:74:1: document : DOCUMENT LPAR ( base )? ( prefix )* ( importDecl )* ( group )? RPAR -> ^( DOCUMENT ( base )? ^( PREFIXES ( prefix )* ) ^( IMPORTS ( importDecl )* ) ( group )? ) ;
    public final RuleMLPresentationSyntaxParser.document_return document() throws RecognitionException {
        RuleMLPresentationSyntaxParser.document_return retval = new RuleMLPresentationSyntaxParser.document_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token DOCUMENT15=null;
        Token LPAR16=null;
        Token RPAR21=null;
        RuleMLPresentationSyntaxParser.base_return base17 =null;

        RuleMLPresentationSyntaxParser.prefix_return prefix18 =null;

        RuleMLPresentationSyntaxParser.importDecl_return importDecl19 =null;

        RuleMLPresentationSyntaxParser.group_return group20 =null;


        Object DOCUMENT15_tree=null;
        Object LPAR16_tree=null;
        Object RPAR21_tree=null;
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");
        RewriteRuleTokenStream stream_DOCUMENT=new RewriteRuleTokenStream(adaptor,"token DOCUMENT");
        RewriteRuleSubtreeStream stream_importDecl=new RewriteRuleSubtreeStream(adaptor,"rule importDecl");
        RewriteRuleSubtreeStream stream_prefix=new RewriteRuleSubtreeStream(adaptor,"rule prefix");
        RewriteRuleSubtreeStream stream_base=new RewriteRuleSubtreeStream(adaptor,"rule base");
        RewriteRuleSubtreeStream stream_group=new RewriteRuleSubtreeStream(adaptor,"rule group");
        try {
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:75:5: ( DOCUMENT LPAR ( base )? ( prefix )* ( importDecl )* ( group )? RPAR -> ^( DOCUMENT ( base )? ^( PREFIXES ( prefix )* ) ^( IMPORTS ( importDecl )* ) ( group )? ) )
            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:76:9: DOCUMENT LPAR ( base )? ( prefix )* ( importDecl )* ( group )? RPAR
            {
            DOCUMENT15=(Token)match(input,DOCUMENT,FOLLOW_DOCUMENT_in_document350); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_DOCUMENT.add(DOCUMENT15);


            LPAR16=(Token)match(input,LPAR,FOLLOW_LPAR_in_document361); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LPAR.add(LPAR16);


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:78:9: ( base )?
            int alt3=2;
            switch ( input.LA(1) ) {
                case BASE:
                    {
                    alt3=1;
                    }
                    break;
            }

            switch (alt3) {
                case 1 :
                    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:78:9: base
                    {
                    pushFollow(FOLLOW_base_in_document371);
                    base17=base();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_base.add(base17.getTree());

                    }
                    break;

            }


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:79:9: ( prefix )*
            loop4:
            do {
                int alt4=2;
                switch ( input.LA(1) ) {
                case PREFIX:
                    {
                    alt4=1;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:79:9: prefix
            	    {
            	    pushFollow(FOLLOW_prefix_in_document382);
            	    prefix18=prefix();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_prefix.add(prefix18.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:80:9: ( importDecl )*
            loop5:
            do {
                int alt5=2;
                switch ( input.LA(1) ) {
                case IMPORT:
                    {
                    alt5=1;
                    }
                    break;

                }

                switch (alt5) {
            	case 1 :
            	    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:80:9: importDecl
            	    {
            	    pushFollow(FOLLOW_importDecl_in_document393);
            	    importDecl19=importDecl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_importDecl.add(importDecl19.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:81:9: ( group )?
            int alt6=2;
            switch ( input.LA(1) ) {
                case GROUP:
                    {
                    alt6=1;
                    }
                    break;
            }

            switch (alt6) {
                case 1 :
                    // org/ruleml/api/presentation_syntax_parser/RuleMLPresentationSyntax.g:81:9: group
                    {
                    pushFollow(FOLLOW_group_in_document404);
                    group20=group();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_group.add(group20.getTree());

                    }
                    break;

            }


            RPAR21=(Token)match(input,RPAR,FOLLOW_RPAR_in_document415); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RPAR.add(RPAR21);


            // AST REWRITE
            // elements: importDecl, group, DOCUMENT, prefix, base
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
